Archive2/b9/f5f1f3b2e69e90/output
main.cpp:14:16: error: variable templates are a C++1y extension [-Werror,-Wc++1y-extensions]
constexpr auto foo = nullptr;
               ^
main.cpp:17:16: error: variable templates are a C++1y extension [-Werror,-Wc++1y-extensions]
constexpr auto foo<true> = foo1;
               ^
main.cpp:20:16: error: variable templates are a C++1y extension [-Werror,-Wc++1y-extensions]
constexpr auto foo<false> = foo2;
               ^
3 errors generated.
